--- a/src/main.css
+++ b/src/main.css
@@ -27,7 +27,10 @@ h2 {
 }
 
 a {
-  color: #fff;
+	color: #fff;
+	display: inline-block;
+	font: 30px 'Open Sans';
+	text-decoration: none;
 }
 
 .grid {
