--- a/src/main.css
+++ b/src/main.css
@@ -41,7 +41,7 @@ a {
 }
 
 .grid {
-	position: absolute; top: 100px; left: 0;
+	position: absolute; top: 100px; left: 110px;
 	/*Width = (225 + 20 + 20) * 4 = 1060*/
 	width: 1060px;
 	/*3D Transform*/
